# file-server-ez-https

./: .env  .env.example  .env.keys  README.md  pyproject.toml
.cursor/rules/: auto-feature-branch.mdc
caddy/: Caddyfile  README.md  build-super-caddy.sh
hooks/: pre-commit  pre-push
src/file_server_auto_https/: __init__.py  cli.py
src/file_server_auto_https/cloudflare/: __init__.py  client.py  exceptions.py
src/file_server_auto_https/cmd/: __init__.py
src/file_server_auto_https/cmd/cloudflare/: generate_dns_record.py
src/file_server_auto_https/cmd/server/: serve.py
src/file_server_auto_https/lib/: __init__.py  grab_ip.py
src/file_server_auto_https/lib/cloudflare/: __init__.py  cloudflare_handler.py
src/file_server_auto_https/lib/server/: __init__.py  file_server.py
src/file_server_auto_https/lib/utils/: __init__.py  config.py  ip.py
src/file_server_auto_https/server/: __init__.py
tests/: test_file-server.py  test_generate_dns_record.py  test_grab-ip.py
